fix overflows and move notifications

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @use "base";
+@use "responsive";
 @use "main_tab";
 @use "settings";
 @use "sidebar";
@@ -21,9 +22,10 @@ body, html {
   border-bottom: 1px solid var(--grey-2);
   user-select: none;
 
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   -ms-overflow-style: none;
-  scrollbar-width: none; 
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
     display: none;
@@ -38,6 +40,10 @@ body, html {
     margin-left: 0.5rem;
     margin-right: 1rem;
     font-size: 1.4rem;
+
+    @include responsive.mobile() {
+      display: none;
+    }
   }
 
   .tab {
@@ -55,6 +61,10 @@ body, html {
   .info-link {
     font-size: 0.9rem;
     margin-left: 1rem;
+
+    @include responsive.mobile() {
+      display: none;
+    }
   }
 
   a, a:visited, a:hover, a:active {
