--- a/styles/main_tab.scss
+++ b/styles/main_tab.scss
@@ -77,6 +77,7 @@
       cursor: pointer;
       user-select: none;
     }
+
     .options-button-clickable:hover {
       background-color: var(--grey-2);
     }
@@ -86,6 +87,7 @@
       flex-direction: column;
       padding: 0.5rem;
     }
+
     .options-dropdown[data-hidden="true"] {
       display: none;
     }
@@ -111,6 +113,7 @@
         width: 2.75rem;
         height: 2.75rem;
       }
+
       cura-icon:hover {
         background-color: var(--grey-2);
       }
@@ -138,10 +141,12 @@
         width: 1.5rem;
         height: 1.5rem;
       }
+
       div {
         display: flex;
         flex-direction: column;
       }
+
       span {
         font-size: 0.8rem;
       }
@@ -206,8 +211,10 @@
         align-items: center;
         gap: 0.5rem;
       }
+
       .icon-row-small {
         font-size: 0.8rem;
+
         cura-icon {
           height: 1.1rem;
           width: 1.1rem;
@@ -223,8 +230,8 @@
 
 #notifications {
   position: absolute;
-  top: calc(var(--tab-height) + 0.5rem);
-  right: calc(var(--sidebar-width) + 0.5rem);
+  bottom: 0.5rem;
+  left: 0.5rem;
 
   display: flex;
   flex-direction: column;
